feature(annotation): 1, add Ctrl+1 shortcuts for hide all labels 2, add Ctrl+2 shortcuts for show all labels 3, add Ctrl+3 shortcuts for deactivate the create mode

--- a/labelme/config/default_config.yaml
+++ b/labelme/config/default_config.yaml
@@ -99,3 +99,7 @@ shortcuts:
   add_point_to_edge: Ctrl+Shift+P
   edit_label: Ctrl+E
   toggle_keep_prev_mode: Ctrl+P
+  # awk custom shortcuts
+  hide_all: Ctrl+1
+  show_all: Ctrl+2
+  cancel_edit: Ctrl+3
